--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-midnight
-title: [Animal Base]
-description: [by the neuroethology lab www.neuroetho.uni-tuebingen.de]
+title: Animal Base
+description: by the neuroethology lab www.neuroetho.uni-tuebingen.de
 show_downloads: "true"
